# convention-lint

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: config.rs  convention.rs  core.rs  error.rs  lib.rs  lint.rs  main.rs
tests/: cli.rs  convention.rs  lint.rs
tests/fixtures/fail/: Cargo.toml
tests/fixtures/fail/src/: OrderProcessor.rs  bad_module.rs
tests/fixtures/pass/: Cargo.toml
tests/fixtures/pass/src/: my_module.rs
