[package]
name = "convention-lint"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["Jaroslaw Roszyk <roszyk.jarek@gmail.com>"]
description = "File-naming convention linter configurable via Cargo.toml metadata — use as `cargo convention-lint` or embed as a library"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/roszyk/convention-lint"
documentation = "https://docs.rs/convention-lint"
homepage = "https://github.com/roszyk/convention-lint"
keywords = ["lint", "naming", "convention", "cargo", "monorepo"]
categories = ["development-tools", "command-line-utilities", "rust-patterns"]
exclude = ["tests/", ".github/"]

[package.metadata.convention-lint]
rs = "snake_case"

[package.metadata.convention-lint.dirs]
rs = ["src/"]

# Invokable as `cargo convention-lint` (cargo subcommand convention)
[[bin]]
name = "cargo-convention-lint"
path = "src/main.rs"

[dependencies]
ignore = "0.4.25"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "1"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# ---------------------------------------------------------------------------
# Lint configuration — enforced on `cargo clippy` and in CI.
# All pedantic + nursery lints are enabled by default; individual lints
# that are too noisy for this codebase are explicitly allowed below.
# ---------------------------------------------------------------------------
[lints.rust]
missing_docs       = "warn"
unreachable_pub    = "warn"
unused_import_braces = "warn"
unused_lifetimes   = "warn"

[lints.clippy]
# Groups — start strict, allow specific exceptions below
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }

# Exceptions — lints from the groups above that are too opinionated
# or conflict with idiomatic patterns in this codebase.
module_name_repetitions = "allow"  # e.g. config::Config, error::Error
missing_errors_doc      = "allow"  # covered by variant-level docs in Error
