[package]
name = "fixture-fail"
version = "0.0.0"
edition = "2021"

# This fixture intentionally contains naming violations.
# `cargo convention-lint` must exit 1 and report the bad stems.

[package.metadata.convention-lint]
idl = "snake_case"
rs  = "CamelCase"

[package.metadata.convention-lint.dirs]
idl = ["idl"]
rs  = ["src"]

[lib]
path = "src/bad_module.rs"
