[package]
name = "fixture-fail"
version = "0.0.0"
edition = "2024"

[[package.metadata.convention-lint.checks]]
dirs = ["idl"]
include = ["*.idl"]
format = "snake_case"

[[package.metadata.convention-lint.checks]]
dirs = ["src"]
include = ["*.rs"]
format = "CamelCase"

[lib]
path = "src/bad_module.rs"
