[package]
name = "fixture-pass"
version = "0.0.0"
edition = "2024"

[[package.metadata.convention-lint.checks]]
dirs = ["idl"]
include = ["*.idl"]
format = "snake_case"

[[package.metadata.convention-lint.checks]]
dirs = ["src"]
include = ["*.rs"]
format = "snake_case"

[lib]
path = "src/my_module.rs"
